--- a/multi.metagenome/Genome_extraction.Rmd
+++ b/multi.metagenome/Genome_extraction.Rmd
@@ -1,7 +1,7 @@
 Genome extraction
 =======================================
 
-##Patter
+##Store Patter. Store, bløde, spændstige.....
 
 ## Load data
 
