--- a/multi.metagenome/General_plots.Rmd
+++ b/multi.metagenome/General_plots.Rmd
@@ -4,6 +4,7 @@ General overview
 ## Load data
 
 ```{r Loaddata, message=FALSE, warning=FALSE, results='hide'}
+library("knitr")
 knit('Load_data.Rmd', tangle=TRUE)
 source(file="Load_data.R")
 ```
